refactor: clean up deprecations and legacy UI applet wrappers
- Removed `AppletLauncher.java` which used the deprecated and marked for removal `java.applet.Applet`.
- Modernized `Class.newInstance()` usages across `Thinlet.java`, `Variation.java`, and `XForm.java` to explicitly call `getDeclaredConstructor().newInstance()`.
- Modernized `new URL("jar:...")` in `XForm.java` to leverage `URI.toURL()` to fix deprecation warnings and safely handle path encoding.
- Stripped redundant `AccessController.doPrivileged` blocks from `XForm.java` as they are deprecated for removal.

Co-authored-by: robertpelloni <673434+robertpelloni@users.noreply.github.com>